# soda

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  test.yml
soda/: __init__.py  __version__.py  config_mod.py  curves.py  custom_tags.py  paths.py  point.py  tags.py  utils.py  xml_parse.py
test/: test_custom.py  test_parse.py  test_path.py  test_point.py  test_render.py  test_tag.py
