[tool.poetry]
name = "soda-svg"
packages = [{include = "soda"}]
version = "1.1.9"
description = "Fast SVG generation tool"
authors = ["Dmitry Gritsenko <soda@evtn.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/evtn/soda"
homepage = "https://github.com/evtn/soda"
keywords = ["soda", "svg", "xml"]

[tool.poetry.dependencies]
python = ">=3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
